--- a/templates/shop/list.html
+++ b/templates/shop/list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}product list {% endblock %}
 {% block content%}
-    <div class="head">
+    <div class="header">
     {% if category %}
         <h1> products list of {{ category.name }}</h1>
         {% else %}
