--- a/templates/shop/detail.html
+++ b/templates/shop/detail.html
@@ -23,6 +23,8 @@
                 <span class="discounted-price">{{ product.new_price }}</span>
                 
             </div>
+            <br>
+        <button type="button" id="add-cart">Add to cart</button>
         </div>
         <div class="product-images">
             {% for img in product.images.all %}
@@ -34,4 +36,31 @@
         <h3>information about product</h3>
         <p>{{ product.description }}</p>
     </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   <script>
+  $(document).ready(function(){
+    $('#add-cart').click(function(){
+        var button = $(this);
+        var quantity = $('#id-quantity').val(); // Use jQuery to get the value
+
+        // Get the CSRF token from Django
+        var csrfToken = '{{ csrf_token }}';
+
+        $.ajax({
+           type: 'POST',
+           url: '{% url "cart:add_to_cart" product.id %}',
+           data:{
+               'csrfmiddlewaretoken': csrfToken, // Use the variable instead of Django template tag
+                'quantity': quantity,
+           },
+           success: function(data) {
+               $('#item_count').text(data.item_count);
+               $('#total_price').text(data.total_price);
+           },
+        });
+    });
+});
+</script>
 {% endblock %}
