--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -3,7 +3,8 @@
     <a href="#" class="cart-link">
         <div class="cart-info-container">
             <span class="cart-icon"></span>
-            <span class="item-count">{{ item_count }}</span>items,<span class="total-price">{{ cart.get_total_price }}</span>
+            <span id="item_count" class="item-count">{{ item_count }}</span>items,
+            <span id="total_price" class="total-price">{{ cart.get_total_price }}</span>
         </div>
     </a>
     {% endwith %}
