--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -8,7 +8,7 @@
 <div class="cart-count">
     {% for item in cart %}
 
-        <div class="product-item">
+        <div class="product-item" data-item-id="{{ item.product.id }}">
             <a href="{% url "shop:product_detail" item.product.id item.product.slug%}">
                 <img src="{{ item.product.first.file.url }}" class="product-image">
             </a>
@@ -16,9 +16,9 @@
                 <a href="{% url 'shop:product_detail' item.product.id item.product.slug %}">
                     item name:{{ item.product.name }}
                 </a>
-                <p>inventory:<span>{{ item.quantity }}</span></p>
+                <p>inventory:<span id="item-quantity-{{ item.product.id }}">{{ item.quantity }}</span></p>
                 <p>price per one:<span>{{ item.price }}</span></p>
-                <p> total price:<span>{{ item.total }}</span></p>
+                <p> total price:<span id="item-total-{{ item.product.id }}">{{ item.total }}</span></p>
             </div>
             <div class="actions">
                 <div class="quantity-add">+</div>
@@ -39,4 +39,45 @@
         <div class="back-btn"><a href="{% url 'shop:products_list' %}">back list of products</a></div>
     </div>
 </div>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(document).ready(function (){
+            $('quantity-add').on('click',function (){
+                updateQuantity($(this).closest('product-item').data('item-id'),'add');
+            });
+            
+            $('quantity-decrease').on('click',function (){
+                updateQuantity($(this).closest('product-item').data('item-id'),'decrease');
+            });
+            
+            function updateQuantity(itemID, action){
+                $.ajax({
+                    type: 'POST',
+                    url: '{% url "cart:update_quantity" %}',
+                    data:{
+                        'item_id': itemID,
+                        'action': action,
+                        'csrfmiddlewaretoken':"{{ csrf_token }}"
+                    },
+                    success: function (response){
+                        if (response.success){
+                            $('#item_count').text(response.item_count)
+                            $('#total_price').text(response.total_price);
+                            $('#item-quantity-'+itemID).text(response.quantity);
+                            $('#item-total-'+itemID).text(response.total);
+                            $('#final_price').text(response.total);
+                            
+                            
+                            
+                        }else {
+                            alert('Error updating quantity');
+                        }
+                    }
+                })
+                
+            }
+            
+        })
+        
+    </script> 
 {% endblock %}
