--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -35,7 +35,7 @@
 
   </div>
     <div class="checkout-buttons">
-        <div class="continue-bth"><a href="#">continue shopping</a></div>
+        <div class="continue-bth"><a href="{% url 'orders:verify_phone' %}">continue shopping</a></div>
         <div class="back-btn"><a href="{% url 'shop:products_list' %}">back list of products</a></div>
     </div>
 </div>
