--- a/templates/order/verify_code.html
+++ b/templates/order/verify_code.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<h2>verify phone number</h2>
+<form method="post">
+    {% csrf_token %}
+    <input type="text" name="code" placeholder="enter the verify code">
+    <button type="submit"> verify code</button>
+</form>
